fix content responsiveness and background color

--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <html>
 	<head>
+		<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 		<style>
 			body{
 				margin: 0;
-				background-color: #24447B;
 				text-align: center;
+			}
+
+			#content{
+				height: 90%;
+				background-image: url(img/content.jpg);
+				background-size: contain;
+    			background-repeat: no-repeat;
+    			background-position: center center; 
+				background-color: #24437d;
 			}
 			
 			#footer{
@@ -19,16 +28,10 @@
     			background-position: center center; 
     			
 			}
-
-			@media only screen and (max-width: 700px) {
-	 			.footer-img {
-	 				
-	  			}
-			}
 		</style>
 	</head>
 	<body>
-		<img style="height: 90%;" src="img/content.jpg"></body>
+		<div id="content">
 		<div id="footer">
 		</div>
 	</body>
