--- a/index.html
+++ b/index.html
@@ -4,16 +4,32 @@
 		<style>
 			body{
 				margin: 0;
-				text-align: center;
 			}
 
 			#content{
+				position: relative;
 				height: 90%;
-				background-image: url(img/content.jpg);
-				background-size: contain;
-    			background-repeat: no-repeat;
-    			background-position: center center; 
-				background-color: #24437d;
+				width: 100%;
+				background: center / cover no-repeat url(img/v2/bg.jpg);
+			}
+
+			#central{
+				position: absolute;
+				width: 100%;
+				height: 100%;
+				background: center / contain no-repeat url(img/v2/nlogo.png);
+				background-position: 50% 40%;
+				background-size: 80%;
+			}
+			#interaction{
+				width: 100%;
+				height: 80px;
+				background: center / contain no-repeat url(img/v2/nbanner.png);
+				position: absolute;
+				bottom: 0;
+				left: 0;
+				text-align: center;
+				background-color: #00e9af;
 			}
 			
 			#footer{
@@ -22,16 +38,53 @@
 				position: absolute;
 				bottom: 0;
 				background-color: white;
-				background-image: url(img/footer.jpg);
-				background-size: contain;
-    			background-repeat: no-repeat;
-    			background-position: center center; 
-    			
+				background: center / contain no-repeat url(img/v2/cropfooter.png);
 			}
+
+			#fazte_button{
+				width: 250px;
+				height: 60px;
+				cursor: pointer;
+				display: inline-block;
+				background: center / cover no-repeat url(img/v2/fazte_button.png);
+				margin-left: 300px;
+				margin-top: -2px;
+			}
+			#fazte_button:hover{
+				filter: brightness(1.2);
+				display: inline-block;
+			}
+			@media screen and (min-width: 1000px) {
+				#central{
+					background-size: 600px;
+				}
+			}
+			@media screen and (max-width: 560px) {
+				#interaction{
+
+				}
+ 			 	#fazte_button {
+ 			 		position: absolute;
+    				margin-left: 0;
+    				right: -3%;
+  				}
+			}	
 		</style>
+		<script>
+			function openForm(){
+				window.open("https://forms.gle/NrRuhNHkUJKk7MjX7");
+			}
+		</script>
 	</head>
 	<body>
 		<div id="content">
+			<div id="central">
+			</div>
+			<div id="interaction">
+				<div id="fazte_button" onclick="openForm()">
+				</div>
+			</div>
+		</div>
 		<div id="footer">
 		</div>
 	</body>
