--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 			#content{
 				position: relative;
-				height: 90%;
+				height: 80%;
 				width: 100%;
 				background: center / cover no-repeat url(img/v2/bg.jpg);
 			}
@@ -23,10 +23,10 @@
 			}
 			#interaction{
 				width: 100%;
-				height: 80px;
+				height: 10%;
 				background: center / contain no-repeat url(img/v2/nbanner.png);
 				position: absolute;
-				bottom: 0;
+				bottom: 10%;
 				left: 0;
 				text-align: center;
 				background-color: #00e9af;
@@ -42,13 +42,13 @@
 			}
 
 			#fazte_button{
-				width: 250px;
-				height: 60px;
+				width: 170px;
+				height: 35px;
+				margin-top: 6px;
 				cursor: pointer;
 				display: inline-block;
-				background: center / cover no-repeat url(img/v2/fazte_button.png);
-				margin-left: 300px;
-				margin-top: -2px;
+				background: center / cover no-repeat url(img/v2/but.png);
+				margin-left: 260px;
 			}
 			#fazte_button:hover{
 				filter: brightness(1.2);
@@ -59,16 +59,24 @@
 					background-size: 600px;
 				}
 			}
-			@media screen and (max-width: 560px) {
-				#interaction{
-
-				}
+			@media screen and (max-width: 700px) {
  			 	#fazte_button {
+ 			 		margin-left: 0;
+ 			 		right: 10px;
  			 		position: absolute;
-    				margin-left: 0;
-    				right: -3%;
   				}
 			}	
+			@media (orientation: portrait) {
+				#interaction{
+					height: 100px;
+					
+				}
+				#fazte_button {
+					position: absolute;
+    				margin-left: 50px;
+    				margin-top: 15px;
+				}
+			}
 		</style>
 		<script>
 			function openForm(){
@@ -80,9 +88,9 @@
 		<div id="content">
 			<div id="central">
 			</div>
-			<div id="interaction">
-				<div id="fazte_button" onclick="openForm()">
-				</div>
+		</div>
+		<div id="interaction">
+			<div id="fazte_button" onclick="openForm()">
 			</div>
 		</div>
 		<div id="footer">
