--- a/oldindex.html
+++ b/oldindex.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title>Técnico Futebol Clube</title>
 		<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 		<style>
 			body{
