--- a/v2/index.html
+++ b/v2/index.html
@@ -156,7 +156,7 @@
 				</span>
 				<div id="sponsors" class="section-row-center">
 					<img class="sponsor-logo" height="60px" src="img/multivision.png">
-					<img class="sponsor-logo" height="40px" src="img/md.png">
+					<img class="sponsor-logo" height="40px" src="img/MD.png">
 					<img class="sponsor-logo" height="40px" src="img/ocsalon.png">
 				</div>
 				<br><br>
