social and sponsor links

--- a/v2/index.html
+++ b/v2/index.html
@@ -37,7 +37,7 @@
 		<div id="content-container">
 			<div class="section-row">
 			FAZ PARTE DO TEU CLUBE. &nbsp; <span class="text-2">FAZ-TE JÁ SÓCIO.</span>
-			<div class="form-button">Aderir</div>
+			<div class="form-button"><a href="https://forms.gle/NrRuhNHkUJKk7MjX7" target="_blank">Aderir</a></div>
 		</div>
 		</div>
 		</div>
@@ -155,18 +155,18 @@
 					PATROCINADORES OFICIAIS
 				</span>
 				<div id="sponsors" class="section-row-center">
-					<img class="sponsor-logo" height="60px" src="img/multivision.png">
-					<img class="sponsor-logo" height="40px" src="img/MD.png">
-					<img class="sponsor-logo" height="40px" src="img/ocsalon.png">
+					<a href="https://multivision.pt/" target="_blank"><img class="sponsor-logo" height="60px" src="img/multivision.png"></a>
+					<a href="http://www.grupo-mmo.com/" target="_blank"><img class="sponsor-logo" height="40px" src="img/MD.png"></a>
+					<a href="http://www.ocsalonangola.com/" target="_blank"><img class="sponsor-logo" height="40px" src="img/ocsalon.png"></a>
 				</div>
 				<br><br>
 				<span id="footer-subtitle" class="section-row-center">
 					APOIOS
 				</span>
 				<div id="sponsors2" class="section-row-center">
-					<img class="sponsor-logo" height="30px" src="img/tecnico.png">
-					<img class="sponsor-logo" height="30px" src="img/adesl.png">
-					<img class="sponsor-logo" height="30px" src="img/aeist.png">
+					<a href="https://tecnico.ulisboa.pt/" target="_blank"><img class="sponsor-logo" height="30px" src="img/tecnico.png"></a>
+					<a href="https://www.adesl.pt/" target="_blank"><img class="sponsor-logo" height="30px" src="img/adesl.png"></a>
+					<a href="https://aeist.pt/" target="_blank"><img class="sponsor-logo" height="30px" src="img/aeist.png"></a>
 				</div>
 				<div id="footer-links" class="section-row-center">
 					<a href="">CONTACTOS&nbsp;</a> | <a href="">&nbsp;FAQS&nbsp;</a> | <a href="">&nbsp;POLÍTICA DE PRIVACIDADE&nbsp;</a> | <a href="">&nbsp;POLÍTICA DE COOKIES&nbsp;</a> | <a href="">&nbsp;TERMOS E CONDIÇÕES&nbsp;</a>
@@ -175,9 +175,10 @@
 			<div id="footer-bottom">
 				<div class="section-row">
 				<div id="footer-bottom-part1">
-					<a href=""><img class="social-icon" src="img/social/facebook.png"></a>
-					<a href=""><img class="social-icon" src="img/social/instagram.png"></a>
-					<a href=""><img class="social-icon" src="img/social/youtube.png"></a>
+					<a href="https://www.facebook.com/TecnicoFutebolClube/" target="_blank"><img class="social-icon" src="img/social/facebook.png"></a>
+					<a href="https://www.instagram.com/tecnicofutebolclube/" target="_blank"><img class="social-icon" src="img/social/instagram.png"></a>
+					<a href="https://www.youtube.com/channel/UCHqCyKZD-cmHvr83vK7invQ" target="_blank"><img class="social-icon" src="img/social/youtube2.png"></a>
+					<a href="https://www.linkedin.com/company/t%C3%A9cnico-futebol-clube/" target="_blank"><img class="social-icon" src="img/social/linkedin2.png"></a>
 				</div>
 				<div id="footer-bottom-content">
 					<span>
