fix content section 2 desktop

--- a/v2/index.html
+++ b/v2/index.html
@@ -6,7 +6,7 @@
 	</head>
 <body>
 	<div id="header">
-		<div id="content-container">
+		<div class="content-container">
 			<div id="header-top">
 				<div class="button primary"><a href="https://forms.gle/NrRuhNHkUJKk7MjX7" target="_blank"><span class="bold">Faz-te Sócio</span></a></div>
 				<div class="button">Login</div>
@@ -34,7 +34,7 @@
 		</div>
 	</div>
 	<div class="section1">
-		<div id="content-container">
+		<div class="content-container">
 			<div class="section-row">
 			FAZ PARTE DO TEU CLUBE. &nbsp; <span class="text-2">FAZ-TE JÁ SÓCIO.</span>
 			<div class="form-button"><a href="https://forms.gle/NrRuhNHkUJKk7MjX7" target="_blank">Aderir</a></div>
@@ -42,29 +42,29 @@
 		</div>
 		</div>
 		<div class="section2">
-				<div id="content-container">
-			<span class="section-title"><span class="bold">ACTUALIDADE</span> DO CLUBE</span>
-			<br><br><br><br><br>
-			<div class="section-row">
-				<div class="img-container">
-					<div class="img-container-img" style="background-image: url(img/award.jpg)">
-					</div>
-					<div class="img-container-caption">
-						<div class="list-item">
-						<div class="list-item-icon">
-							<img class="list-item-icon-img" src="img/calendar.png" />
+			<div class="content-container">
+				<span class="section-title"><span class="bold">ACTUALIDADE</span> DO CLUBE</span>
+				<br><br><br><br><br>
+				<div class="section-row">
+					<div class="img-container">
+						<div class="img-container-img" style="background-image: url(img/award.jpg)">
 						</div>
-						<div class="list-item-content">
-							<div class="list-item-content-topic">
-								Técnico Futebol Clube
-							</div>
-							<div class="list-item-content-title">
-								Entrega de prémios Side Line 2019
+						<div class="img-container-caption">
+							<div class="list-item">
+								<div class="list-item-icon">
+									<img class="list-item-icon-img" src="img/calendar.png" />
+								</div>
+								<div class="list-item-content">
+									<div class="list-item-content-topic">
+										Técnico Futebol Clube
+									</div>
+									<div class="list-item-content-title">
+										Entrega de prémios Side Line 2019
+									</div>
+								</div>
 							</div>
 						</div>
 					</div>
-					</div>
-				</div>
 				<div class="list-container">
 					<div class="list-item">
 						<div class="list-item-icon">
@@ -138,7 +138,7 @@
 		<div class="section3">
 		</div>
 		<div class="section1">
-			<div id="content-container">
+			<div class="content-container">
 			<div class="section-row">
 			<span class="text-2">SUBSCREVER NEWSLETTER</span>
 			 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -149,7 +149,7 @@
 		</div>
 		</div>
 		<div id="footer">
-			<div id="content-container">
+			<div class="content-container">
 			<div id="footer-top">
 				<span id="footer-title" class="section-row-center">
 					PATROCINADORES OFICIAIS
