--- a/index.html
+++ b/index.html
@@ -1,103 +1,205 @@
 <html>
-	<head>
-		<meta name="viewport" content="initial-scale=1, maximum-scale=1">
-		<style>
-			body{
-				margin: 0;
-			}
-
-			#content{
-				position: relative;
-				height: 80%;
-				width: 100%;
-				background: center / cover no-repeat url(img/v2/bg.jpg);
-			}
-
-			#central{
-				position: absolute;
-				width: 100%;
-				height: 100%;
-				background: center / contain no-repeat url(img/v2/nlogo.png);
-				background-position: 50% 40%;
-				background-size: 80%;
-			}
-			#interaction{
-				width: 100%;
-				height: 10%;
-				background: center / contain no-repeat url(img/v2/nbanner.png);
-				position: absolute;
-				bottom: 10%;
-				left: 0;
-				text-align: center;
-				background-color: #00e9af;
-			}
-			
-			#footer{
-				width: 100%;
-				height: 10%;
-				position: absolute;
-				bottom: 0;
-				background-color: white;
-				background: center / contain no-repeat url(img/v2/cropfooter.png);
-			}
-
-			#fazte_button{
-				width: 170px;
-				height: 35px;
-				margin-top: 6px;
-				cursor: pointer;
-				display: inline-block;
-				background: center / contain no-repeat url(img/v2/but.png);
-				margin-left: 260px;
-			}
-			#fazte_button:hover{
-				filter: brightness(1.2);
-				display: inline-block;
-			}
-			@media screen and (min-width: 1000px) {
-				#central{
-					background-size: 600px;
-				}
-			}
-			@media screen and (max-width: 320px) {
- 			 	#fazte_button {
- 			 		margin-left: 0;
- 			 		right: 10px;
- 			 		position: absolute;
-  				}
-			}	
-			@media (orientation: portrait) {
-				#content{
-					height: calc(90% - 100px);
-				}
-				#interaction{
-					height: 100px;
-					
-				}
-				#fazte_button {
-					margin-left: 320px;
-					width: 25%;
-					height: 40%;
-    				margin-top: 15px;
-				}
-			}
-		</style>
-		<script>
-			function openForm(){
-				window.open("https://forms.gle/NrRuhNHkUJKk7MjX7");
-			}
-		</script>
+<head>
+	<title>Técnico Futebol Clube</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
+	<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
 	</head>
-	<body>
-		<div id="content">
-			<div id="central">
+<body>
+	<div id="header">
+		<div class="content-container">
+			<div id="header-top">
+				<div class="button primary"><a href="https://forms.gle/NrRuhNHkUJKk7MjX7" target="_blank"><span class="bold">Faz-te Sócio</span></a></div>
+				<div class="button">Login</div>
+			</div>
+			<div id="main-menu">
+				<div id="main-menu-pt1">
+					<span class="main-menu-item"><a href="clube.html">O Clube</a></span>
+					<span class="main-menu-item"><a href="plantel.html">Plantel</a></span>
+					<span class="main-menu-item"><a href="jogos.html">Jogos</a></span>
+				</div>
+				<div id="main-menu-logo">
+					<a href="index.html"><img id="logo" src="img/logo_tfc2.png"/></a>
+				</div>
+				<div id="main-menu-pt2">
+					<span class="main-menu-item"><a href="actualidade.html">Atualidade</a></span>
+					<span class="main-menu-item"><a href="produtos.html">Produtos</a></span>
+					<span class="main-menu-item"><a href="socios.html">Sócios</a></span>
+				</div>
+			</div>
+			<div id="banner-container">
+				<p class="banner-title">O passado e o presente</p>
+					<p class="banner-title">entram juntos em campo</p>
+				<p id="sub-banner">#SEMPRETECNICO</p>
 			</div>
 		</div>
-		<div id="interaction">
-			<div id="fazte_button" onclick="openForm()">
+	</div>
+	<div class="section1">
+		<div class="content-container">
+			<div class="section-row">
+				FAZ PARTE DO TEU CLUBE. &nbsp; <span class="text-2">FAZ-TE JÁ SÓCIO.</span>
+			<div class="form-button">
+				<a href="https://forms.gle/NrRuhNHkUJKk7MjX7" target="_blank">
+					Aderir
+				</a>
+				<div class="button-bg"></div>
 			</div>
+		</div>
+		</div>
+		</div>
+		<div class="section2">
+			<div class="content-container">
+				<span class="section-title">ACTUALIDADE <b>DO CLUBE</b></span>
+				<br><br><br><br><br>
+				<div class="section-row">
+					<div class="img-container">
+						<div class="img-container-img" style="background-image: url(img/award.jpg)">
+						</div>
+						<div class="img-container-caption">
+							<div class="list-item">
+								<div class="list-item-icon">
+									<img class="list-item-icon-img" src="img/calendar.png" />
+								</div>
+								<div class="list-item-content">
+									<div class="list-item-content-topic">
+										Técnico Futebol Clube
+									</div>
+									<div class="list-item-content-title">
+										Entrega de prémios Side Line 2019
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				<div class="list-container">
+					<div class="list-item">
+						<div class="list-item-icon">
+							<img class="list-item-icon-img" src="img/facebook.png" />
+						</div>
+						<div class="list-item-content">
+							<div class="list-item-content-topic">
+								Técnico Futebol Clube
+							</div>
+							<div class="list-item-content-text">
+								Um dia longo que culmina com o apuramento das duas equipas para a fase seguinte
+							</div>
+						</div>
+					</div>
+					<div class="list-item">
+						<div class="list-item-icon">
+							<img class="list-item-icon-img" src="img/calendar.png" />
+						</div>
+						<div class="list-item-content">
+							<div class="list-item-content-topic">
+								Técnico Futebol Clube
+							</div>
+							<div class="list-item-content-title">
+								4ª Gala do Técnico F.C.
+							</div>
+						</div>
+					</div>
+					<div class="list-item">
+						<div class="list-item-icon">
+							<img class="list-item-icon-img" src="img/football.png" />
+						</div>
+						<div class="list-item-content">
+							<div class="list-item-content-topic">
+								Associação dos Estudantes IST
+							</div>
+							<div class="list-item-content-title">
+								AEIST vs FMH
+							</div>
+						</div>
+					</div>
+					<div class="list-item">
+						<div class="list-item-icon">
+							<img class="list-item-icon-img" src="img/football.png" />
+						</div>
+						<div class="list-item-content">
+							<div class="list-item-content-topic">
+								Técnico Futebol Clube
+							</div>
+							<div class="list-item-content-title">
+								3º Torneio Solidário
+							</div>
+						</div>
+					</div>
+					<div class="list-item">
+						<div class="list-item-icon">
+							<img class="list-item-icon-img" src="img/calendar.png" />
+						</div>
+						<div class="list-item-content">
+							<div class="list-item-content-topic">
+								Técnico Futebol Clube
+							</div>
+							<div class="list-item-content-title">
+								Encontro das Velhas Glórias 2020
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+		<div class="section3">
+		</div>
+		<div class="section1">
+			<div class="content-container">
+			<div class="section-row">
+			<span class="text-2">SUBSCREVER NEWSLETTER</span>
+			 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+			<input type="text" placeholder="insere o teu e-mail"/>
+			&nbsp;&nbsp;&nbsp;
+			<div class="form-button">
+				Enviar
+				<div class="button-bg"></div>
+			</div>
+		</div>
+		</div>
 		</div>
 		<div id="footer">
+			<div class="content-container">
+			<div id="footer-top">
+				<span id="footer-title" class="section-row-center">
+					PATROCINADORES OFICIAIS
+				</span>
+				<div id="sponsors" class="section-row-center">
+					<a href="https://multivision.pt/" target="_blank"><img class="sponsor-logo" height="60px" src="img/multivision.png"></a>
+					<a href="http://www.grupo-mmo.com/" target="_blank"><img class="sponsor-logo" height="40px" src="img/MD.png"></a>
+					<a href="http://www.ocsalonangola.com/" target="_blank"><img class="sponsor-logo" height="40px" src="img/ocsalon.png"></a>
+				</div>
+				<br><br>
+				<span id="footer-subtitle" class="section-row-center">
+					APOIOS
+				</span>
+				<div id="sponsors2" class="section-row-center">
+					<a href="https://tecnico.ulisboa.pt/" target="_blank"><img class="sponsor-logo" height="30px" src="img/tecnico.png"></a>
+					<a href="https://www.adesl.pt/" target="_blank"><img class="sponsor-logo" height="30px" src="img/adesl.png"></a>
+					<a href="https://aeist.pt/" target="_blank"><img class="sponsor-logo" height="30px" src="img/aeist.png"></a>
+				</div>
+				<div id="footer-links" class="section-row-center">
+					<a href="contactos.html">CONTACTOS&nbsp;</a> | <a href="">&nbsp;FAQS&nbsp;</a> | <a href="">&nbsp;POLÍTICA DE PRIVACIDADE&nbsp;</a> | <a href="">&nbsp;POLÍTICA DE COOKIES&nbsp;</a> | <a href="">&nbsp;TERMOS E CONDIÇÕES&nbsp;</a>
+				</div>
+			</div>
+			<div id="footer-bottom">
+				<div class="section-row">
+				<div id="footer-bottom-part1">
+					<a href="https://www.facebook.com/TecnicoFutebolClube/" target="_blank"><img class="social-icon" src="img/social/facebook.png"></a>
+					<a href="https://www.instagram.com/tecnicofutebolclube/" target="_blank"><img class="social-icon" src="img/social/instagram.png"></a>
+					<a href="https://www.youtube.com/channel/UCHqCyKZD-cmHvr83vK7invQ" target="_blank"><img class="social-icon" src="img/social/youtube2.png"></a>
+					<a href="https://www.linkedin.com/company/t%C3%A9cnico-futebol-clube/" target="_blank"><img class="social-icon" src="img/social/linkedin2.png"></a>
+				</div>
+				<div id="footer-bottom-content">
+					<span>
+						© 2020 - All rights reserved | Técnico Futebol Clube
+					</span>
+				</div>
+				<div id="footer-bottom-part2">
+
+				</div>
+			</div>
+			</div>
 		</div>
-	</body>
+	</div>
+	</div>
+</body>
 </html>
